--- a/app/src/main/res/drawable/productbackground.xml
+++ b/app/src/main/res/drawable/productbackground.xml
@@ -4,8 +4,8 @@
 
     <gradient
         android:startColor="#1565c0"
-        android:centerColor="#0d47a1"
-        android:endColor="#2196f3"/>
+        android:centerColor="#2196f3"
+        android:endColor="#009688"/>
 
     <corners
         android:radius="10dp"/>
