--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,13 @@
     <color name="gray">#888888</color>
     <color name="gray_light">#F0F0F0</color>
 
+    <color name="order_selected_bg_color">#f1fcf8</color>
+    <color name="order_selected_text_color">#70d5ab</color>
+
+    <color name="bg_color">#f6f7fc</color>
+    <color name="title_text_color">#213357</color>
+    <color name="text_normal_color">#374457</color>
+
+    <color name="authButtonColor">#3253e0</color>
+
 </resources>
