--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,6 +24,7 @@
         android:layout_below="@+id/adminAccountImage"/>
 
     <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/edEmail"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,9 +32,13 @@
         android:layout_below="@+id/edtadminName"/>
 
 
-
-
-
-
+    <Button
+        android:id="@+id/btnLogout"
+        android:text="Logout"
+        android:layout_marginHorizontal="16dp"
+        android:textAllCaps="false"
+        android:layout_below="@+id/edEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
