brand added successfully

--- a/app/src/main/res/layout/activity_add_brand.xml
+++ b/app/src/main/res/layout/activity_add_brand.xml
@@ -55,7 +55,14 @@
         android:textColor="@color/black"
         android:background="@drawable/productbackground"/>
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:textStyle="bold"
+        android:textColor="#EC080F"
+        android:textSize="20dp"
+        android:id="@+id/error_msg"/>
 
 
 </LinearLayout>
