--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,7 @@
     android:background="#D8D3D3">
 
     <androidx.appcompat.widget.AppCompatImageView
+
         android:id="@+id/adminAccountImage"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -15,21 +16,27 @@
         android:layout_marginTop="20dp"/>
 
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:layout_marginTop="20dp"
-        android:id="@+id/edtadminName"
+    <LinearLayout
+        android:id="@+id/admin_profile"
+        android:layout_below="@+id/adminAccountImage"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Name"
-        android:layout_below="@+id/adminAccountImage"/>
+        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edEmail"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:layout_below="@+id/edtadminName"/>
+
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edEmail"
+            android:layout_margin="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:background="@drawable/textview_background"
+            android:padding="20dp"/>
+
+
+    </LinearLayout>
 
 
     <Button
@@ -37,8 +44,10 @@
         android:text="Logout"
         android:layout_marginHorizontal="16dp"
         android:textAllCaps="false"
-        android:layout_below="@+id/edEmail"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:textSize="20sp"/>
 
 </RelativeLayout>
