--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,6 @@
     android:background="#D8D3D3">
 
     <androidx.appcompat.widget.AppCompatImageView
-
         android:id="@+id/adminAccountImage"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -15,10 +14,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/upload_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:text="Upload image"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/profile_background"
+        android:padding="10dp"
+        android:layout_below="@+id/adminAccountImage"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/save_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:text="Save image"
+        android:background="@drawable/profile_background"
+        android:padding="10dp"
+        android:layout_toRightOf="@+id/upload_image"
+        android:layout_below="@+id/adminAccountImage"
+        android:layout_marginLeft="170dp"/>
+
 
     <LinearLayout
         android:id="@+id/admin_profile"
-        android:layout_below="@+id/adminAccountImage"
+        android:layout_below="@+id/upload_image"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_marginTop="30dp"
