--- a/app/src/main/res/drawable/profile_background.xml
+++ b/app/src/main/res/drawable/profile_background.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#2B40C8"/>
+        android:color="@color/white"/>
 
     <corners
         android:radius="20dp"/>
