--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -8,8 +8,10 @@
     android:background="#BDB4B4"
     tools:context=".product.AddProductActivity">
 
+
+
     <com.google.android.material.textfield.TextInputLayout
-         android:id="@+id/productId"
+         android:id="@+id/productId_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background"
@@ -27,8 +29,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_below="@+id/productId"
-        android:id="@+id/productName"
+        android:layout_below="@+id/productId_container"
+        android:id="@+id/productName_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background"
@@ -46,8 +48,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_below="@+id/productName"
-        android:id="@+id/productDesc"
+        android:layout_below="@+id/productName_container"
+        android:id="@+id/productDesc_container"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/background"
@@ -64,39 +66,38 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
-        android:layout_below="@+id/productDesc"
-        android:background="@color/white"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_below="@+id/productDesc_container"
+        android:id="@+id/product_category"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_margin="15dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/background"
+        android:hint="Category Name"
+        android:layout_margin="10dp">
 
-        <TextView
-            android:id="@+id/txtBrandName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Brand Name"
-            android:textSize="16sp"
-            android:layout_margin="20dp"/>
-
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:layout_marginTop="20dp"
-            android:id="@+id/AllBrands"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtproductCategory"
+            android:textColor="@color/black"
+            android:background="@drawable/background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="TouchTargetSizeCheck" />
 
-    </LinearLayout>
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addMobiles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/productbackground"
-        android:text="Add Mobiles"
         android:layout_above="@+id/addProductButton"
-        android:layout_margin="20dp"
-        android:padding="15dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/productbackground"
+        android:padding="15dp"
+        android:text="Add Mobiles" />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -116,12 +117,15 @@
         android:id="@+id/addProductButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/productbackground"
         android:text="Add Product"
         android:textColor="@color/black"
-        android:textSize="15dp"
-        android:layout_margin="15dp"
-        android:layout_alignParentBottom="true"/>
+        android:textSize="15sp" />
 
 
 </RelativeLayout>
