--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,13 +6,15 @@
     tools:context=".ProfileFragment"
     android:background="#D8D3D3">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/adminAccountImage"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/baseline_account_circle_24"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/upload_image"
