image selected and upload successfully

--- a/app/src/main/res/layout/activity_add_mobile.xml
+++ b/app/src/main/res/layout/activity_add_mobile.xml
@@ -9,6 +9,7 @@
 
 
     <ImageView
+        android:layout_marginTop="20dp"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/mobileImages"
@@ -16,7 +17,7 @@
         android:layout_centerHorizontal="true"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:contentDescription="Select Image" />
 
 
@@ -29,34 +30,39 @@
         android:layout_margin="10dp"
         android:layout_marginTop="30dp">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/ColorId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@drawable/background"
+            android:hint="Colour Id">
 
-            <TextView
-
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="Color : "
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtColorId"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"/>
-            
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="65dp"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:id="@+id/colorSpinner"
-                android:spinnerMode="dialog"
-                android:background="@drawable/color_blob"
-                android:layout_marginEnd="30dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
+                android:background="@drawable/background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="TouchTargetSizeCheck" />
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/Color_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background"
+            android:hint="Colour Id">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtColor_name"
+                android:textColor="@color/black"
+                android:background="@drawable/background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="TouchTargetSizeCheck" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/MobileId"
