--- a/app/src/main/res/layout/color_spineer_item.xml
+++ b/app/src/main/res/layout/color_spineer_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="65dp">
 
@@ -32,7 +33,7 @@
         android:textSize="22sp"
         android:textColor="@color/black"
         android:text="#000000"
-        android:id="@+id/colorHexa"/>
+        android:id="@+id/colorHex"/>
 
 
 
