--- a/app/src/main/res/layout/activity_add_accessroies.xml
+++ b/app/src/main/res/layout/activity_add_accessroies.xml
@@ -7,37 +7,58 @@
     android:background="#C3BBBB"
     tools:context=".product.AddAccessroiesActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/accessoriesImages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_centerHorizontal="true"/>
+    <ImageView
+
+        android:layout_marginTop="20dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/accessImages"
+        android:background="@color/white"
+        android:layout_centerHorizontal="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_marginBottom="20dp"
+        android:contentDescription="Select Image" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background"
         android:orientation="vertical"
-        android:layout_below="@+id/accessoriesImages"
-        android:layout_marginTop="50dp">
+        android:layout_below="@+id/accessImages"
+        android:layout_margin="10dp"
+        android:layout_marginTop="30dp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/AccessId"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background"
-            android:hint="Accessories Id">
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtAccessId"
-                android:textColor="@color/black"
-                android:background="@drawable/background"
-                android:layout_width="match_parent"
+            <TextView
+
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                tools:ignore="TouchTargetSizeCheck" />
+                android:text="Color : "
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"/>
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <Spinner
+                android:layout_width="0dp"
+                android:layout_height="65dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:id="@+id/colorSpinnerAccess"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+
+        </LinearLayout>
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_marginTop="10dp"
@@ -45,17 +66,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background"
-            android:hint="Accessories Specification">
+            android:hint="Specification">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edtAccessSpecification"
                 android:textColor="@color/black"
                 android:background="@drawable/background"
+                android:inputType="text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_marginTop="10dp"
@@ -63,36 +87,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background"
-            android:hint="Accessories price">
+            android:hint="Access Price">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edtAccessPrice"
+                android:inputType="numberDecimal"
                 android:textColor="@color/black"
                 android:background="@drawable/background"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
     </LinearLayout>
 
 
-
-
-
-
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/addAccessoriesButton"
+        android:id="@+id/addAccessButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/productbackground"
-        android:layout_margin="20dp"
         android:text="Add Accessories"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 
 
 
