--- a/app/src/main/res/layout/product_items.xml
+++ b/app/src/main/res/layout/product_items.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,36 +7,49 @@
     android:layout_height="256dp"
     android:paddingHorizontal="24dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/productImageview"
-        android:layout_width="128dp"
-        android:layout_height="192dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"
-        app:srcCompat="@color/black"
-        />
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvProductTitle"
+    <RelativeLayout
+        android:id="@+id/rlContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:textSize="18sp"
-        android:layout_marginStart="4dp"
-        app:layout_constraintTop_toBottomOf="@id/productImageview"/>
+        android:layout_height="140dp">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvProductPrice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:textSize="18sp"
-        android:layout_marginStart="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tvProductTitle"/>
+        <ImageView
+            android:id="@+id/imgProductImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/ic_image" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/txtProductName"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_toEndOf="@id/imgProductImage"
+            android:text="Product Name"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:padding="5dp"/>
+
+
+       <TextView
+           android:id="@+id/txtProductPrice"
+           android:layout_width="200dp"
+           android:layout_height="wrap_content"
+           android:text="Product Price"
+           android:layout_below="@+id/txtProductName"
+           android:layout_toRightOf="@+id/imgProductImage"
+           android:textColor="#000000"
+           android:textSize="15sp"
+           android:textStyle="bold"
+           android:padding="5dp"
+           />
+
+
+
+    </RelativeLayout>
+
+
+</androidx.cardview.widget.CardView>
