--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -64,8 +64,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rvOrder" />
+            android:id="@+id/rvOrder"
+            tools:listitem="@layout/order_items"/>
 
     </LinearLayout>
 
 </RelativeLayout>
+
+
