--- a/app/src/main/res/layout/order_items.xml
+++ b/app/src/main/res/layout/order_items.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:fontFamily="@font/satoshi_medium"
                 android:layout_height="wrap_content"
-                android:textSize="10sp"
+                android:textSize="11sp"
                 android:textColor="@color/text_normal_color"
                 android:text="Order Date"/>
 
@@ -43,11 +43,12 @@
                 android:textSize="10sp"
                 android:fontFamily="@font/satoshi_medium"
                 android:textColor="@color/text_normal_color"
-                android:text="surajsinhrathod007@gmail.com"
+                android:text="ashishrajput8156@gmail.com"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_marginRight="5dp"
             android:id="@+id/linearOrderPrice"
@@ -60,7 +61,7 @@
 
             <TextView
                 android:id="@+id/txtOrderTotal"
-                android:text="$500.00"
+                android:text="5000.00"
                 android:textStyle="bold"
                 android:textColor="@color/order_selected_text_color"
                 android:layout_width="wrap_content"
