--- a/app/src/main/res/layout/activity_all_product.xml
+++ b/app/src/main/res/layout/activity_all_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/background"
         app:menu="@menu/search_menu"
-        app:title="Mobiles"
+        app:title="Products"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -22,7 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 
 
