--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,61 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ProfileFragment"
-    android:background="#D8D3D3">
-
-        <ImageView
-            android:id="@+id/adminAccountImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/baseline_account_circle_24"/>
+    android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/admin_profile"
-            android:layout_below="@+id/adminAccountImage"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_marginTop="30dp"
-            android:layout_height="wrap_content">
+            android:id="@+id/linearLayout6"
+            android:layout_width="0dp"
+            android:layout_height="230dp"
+            android:background="@color/teal_700"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/edEmail"
-                    android:layout_margin="20dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/adminAccountImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:elevation="6dp"
+            android:src="@drawable/profile"
+            app:civ_border_color="@android:color/white"
+            app:civ_border_width="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout6" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-75dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/slider_background"
+            android:elevation="6dp"
+            android:orientation="vertical"
+            android:padding="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/adminAccountImage">
+
+                <TextView
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
-                    android:background="@drawable/textview_background"
-                    android:padding="20dp"/>
+                    android:layout_marginBottom="8dp"
+                    android:text="Ashish"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-
+                <TextView
+                    android:id="@+id/user_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ashish7890@gmail.com"
+                    android:textAlignment="center"
+                    android:textColor="#000000" />
         </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/settings_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:clickable="true"
+            android:tint="@color/primary_color"
+            app:backgroundTint="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout7"
+            app:srcCompat="@drawable/setting" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/AddAdminButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@color/primary_color"
             android:backgroundTint="@color/primary_color"
-            android:textColor="@color/black"
+            android:padding="5dp"
             android:text="Add Admin"
-            android:layout_below="@+id/admin_profile"
-            android:layout_margin="10dp"
-            android:padding="5dp"/>
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnLogout"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/primary_color"
-            android:background="@color/primary_color"
-            android:text="Logout"
             android:layout_below="@+id/AddAdminButton"
-            android:layout_margin="10dp"
-            android:padding="5dp"/>
+            android:layout_marginTop="10dp"
+            android:background="@color/primary_color"
+            android:backgroundTint="@color/primary_color"
+            android:padding="5dp"
+            android:text="Logout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
 
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
