--- a/app/src/main/res/layout/activity_add_mobile.xml
+++ b/app/src/main/res/layout/activity_add_mobile.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/mobileImages"
@@ -17,13 +17,8 @@
         android:layout_centerHorizontal="true"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="Select Image" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mobileImages">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +27,7 @@
             android:orientation="vertical"
             android:layout_below="@+id/mobileImages"
             android:layout_margin="10dp"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -161,21 +156,13 @@
 
         </LinearLayout>
 
-    </ScrollView>
-
-
-
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addMobileButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+       android:layout_margin="10dp"
         android:background="@drawable/productbackground"
         android:text="Add Mobile"
         android:textSize="18sp" />
