--- a/app/src/main/res/layout/activity_all_product.xml
+++ b/app/src/main/res/layout/activity_all_product.xml
@@ -1,32 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#BCB6B6"
-    tools:context=".product.AllProductActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/all_product_layout"
+    <data>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background"
-        app:menu="@menu/search_menu"
-        app:title="Products"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/all_product_layout"
-        android:id="@+id/rvProducts"
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        android:background="#BCB6B6"
+        android:orientation="vertical"
+        android:gravity="center"
+        tools:context=".product.AllProductActivity">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/all_product_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background"
+            app:menu="@menu/search_menu"
+            app:title="Products" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:listitem="@layout/horizontal_scroll_item_layout"
+            app:spanCount="2"
+            android:layout_marginTop="10dp"
+            android:id="@+id/rvProducts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"/>
 
 
-
-
-
-</RelativeLayout>
+    </LinearLayout>
+</layout>
